Added table view for heroes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,10 @@
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/table">Table view</a>
 </nav>
 <div>
-  Router outlet:
   <router-outlet></router-outlet>
-  -----
 </div>
 <app-messages></app-messages>
 <my-component></my-component>
